# linguist-rs

./: Cargo.toml  LICENSE  README.md
examples/gh-linguist/: Cargo.toml  README.md  build.rs
examples/gh-linguist/src/: main.rs
linguist/: Cargo.toml
linguist-build/: Cargo.toml
linguist-build/src/: lib.rs
linguist/src/: container.rs  error.rs  github.rs  lib.rs  resolver.rs  serde.rs  utils.rs
