[package]
name = "linguist-rs-build"
description = "A build script for linguist-rs"
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/adiepenbrock/linguist-rs"
authors = ["Andreas Diepenbrock"]

[lib]
name = "linguist_build"
path = "src/lib.rs"

[dependencies]
linguist-rs = { version = "1.1.0", path = "../linguist", features = ["github-linguist-yaml"] }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_yaml = { version = "0.9", optional = true }
tempfile = { version = "3.5.0" }
reqwest = { version = "0.11.17", features = ["blocking"] }
quote = { version = "1.0.27" }

[features]
serde = ["dep:serde"]
default = ["serde"]
