[package]
name = "linguist-rs"
description = "A library that can be used to detect programming languages."
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/adiepenbrock/linguist-rs"
authors = ["Andreas Diepenbrock"]

[lib]
name = "linguist"
path = "src/lib.rs"

[dependencies]
regex = { version = "1.8.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
log = "0.4.20"
serde_yaml = { version = "0.9.21", optional = true }

[features]
# this features enables the functionality to load language definitions from a yaml file
serde = ["dep:serde", "dep:serde_yaml"]
matcher = ["dep:regex"]
github-linguist-yaml = ["serde"]
default = ["serde", "matcher"]

